# website-rust-version

./: Cargo.toml
src/: csvutils.rs  dateutil.rs  entity.rs  main.rs  redisutil.rs
src/controller/: task_controller.rs
src/core/: connection.rs  mail.rs  mod.rs  mysql.rs  query.rs  template.rs  thread_pool.rs
src/core/validation/: mod.rs  seq_validate.rs
src/entity/: mod.rs  model_entity.rs  task_body.rs
src/utils/: captchautil.rs  csvutils.rs  dateutil.rs  fileutil.rs  mod.rs  redisutil.rs
template/: notification.html
