[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"
# links = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
actix-multipart = "0.6.1"
# actix-easy-multipart = "3.0.0"
rand = "0.8.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2_redis = "0.14.0"
captcha = "0.0.9"
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.10.2"
tera = "1"
lettre = "0.11"
futures-util = "0.3"
# sea-orm-migration = "0.12.0"
# tokio = "1.30"
# r2d2_mysql = "24"
